--- a/LandingP.css
+++ b/LandingP.css
@@ -3,8 +3,14 @@ body,html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background: white;
   }
 
+.containerall{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
  
 
 header{
@@ -57,6 +63,7 @@ padding-top: 20px;
     position: absolute;
     width: 100%;
     height: 275px;
+    top: 87px;
     background-color: whitesmoke;
 }
 
@@ -103,120 +110,115 @@ color: #042603;
 .services{
     /* Services section */
 
-box-sizing: border-box;
-position: relative;
-width: 100%;
-height: 300px;
-top: 150px;
-background-color: whitesmoke;
-justify-content: center;
-align-items: center;
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 300px;
+    background-color: whitesmoke;
+    top: 275px;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+
 
 }
+
+
+
 .services h2{
     font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
     font-style: normal;
     font-weight: 700;
     color: #042603;
-    text-align: center;
-
-}
+    position: absolute;
+    top: -20px;
+} 
 
 .BuySell img{
-    /* Buy and sell logo */
+    /* Buy and sell logo*/
 
 
-position: absolute;
+position: relative;
 width: 200px;
 height: 200px;
-left: 97px;
-top: 7px;
-
+margin-left: 70px;
 
 }
 
 .BuySell p{
     /* Buy and Sell */
+    position: relative;
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 44px;
+    font-size: 30px;
+    width: 45x;
+    height: 40x;
+    font-style: normal;
+    font-weight: 400;
+    color: #000000;
+    margin-left: 70px;
 
-
-position: absolute;
-width: 224px;
-height: 37px;
-left: 152px;
-top: 200px;
-
-font-family: 'Times New Roman', Times, serif;
-font-style: normal;
-font-weight: 400;
-font-size: 36px;
-line-height: 44px;
-
-color: #000000;
 
 }
+
 
 .Networking img{
-    /* Handshake (1) 1 */
+    /* Handshake (1) 1*/
 
 
-position: absolute;
+position: relative;
 width: 200px;
 height: 200px;
-left: 531px;
-top: 21px;
+/*left: 531px;
+top: 21px; */
 
 }
+
 
 .Networking p{
     /* Network */
+    position: relative;
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 44px;
+    font-size: 30px;
+    width: 45x;
+    height: 40x;
+    font-style: normal;
+    font-weight: 400;
+    color: #000000;
 
-
-position: absolute;
-width: 168px;
-height: 37px;
-left: 645px;
-top: 200px;
-
-font-family: 'Times New Roman', Times, serif;
-font-style: normal;
-font-weight: 400;
-font-size: 36px;
-line-height: 44px;
-
-color: #000000;
-
-}
+} 
 
 .Training img{
-    /* Training 1 */
+    /* Training 1 */ 
 
 
-position: absolute;
+position: relative;
 width: 200px;
 height: 200px;
+/*
 left: 979px;
 top: 7px;
+*/
 }
+
+
 
 .Training p{
     /* Train */
 
+    position: relative;
+    font-family: 'Times New Roman', Times, serif;
+    line-height: 44px;
+    font-size: 30px;
+    width: 45x;
+    height: 45x;
+    font-style: normal;
+    font-weight: 400;
+    color: #000000;
+} 
 
-position: absolute;
-width: 168px;
-height: 37px;
-left: 1102px;
-top: 200px;
-
-font-family: 'Times New Roman', Times, serif;
-font-style: normal;
-font-weight: 400;
-font-size: 36px;
-line-height: 44px;
-
-color: #000000;
-}
 
 .video{
     position: absolute;
@@ -234,16 +236,15 @@ color: #000000;
     width: 300px;
     height: 200px;
     margin: 0 auto;
-    border: 1px solid red;
     border-radius: 4px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, .2);
     transition: all .5s;
   }
 
-  .img:hover {
+ .img:hover {
     box-shadow: 1px 1px 6px rgba(0, 0, 0, .2);
     opacity: .7;
-  }
+  } 
 
   .img::before, .img::after {
     content: '';
@@ -251,6 +252,7 @@ color: #000000;
     top: 50%;
     left: 50%;
     z-index: 5;
+    
   }
 
   .img::before {
@@ -259,6 +261,8 @@ color: #000000;
     margin: -24px 0 0 -24px;
     background-color: #333;
     border-radius: 50%;
+    
+    
 
   }
 
@@ -267,6 +271,8 @@ color: #000000;
     border-style: solid;
     border-width: 8px 0 8px 16px;
     border-color: transparent transparent transparent #fff;
+    
+    
   }
 
 
@@ -311,11 +317,11 @@ color: #000000;
    
   .lightboxContainer img {
     width: 250px;
-  }*/
+  } */
   
 
 .team{
-    position: relative;
+    position: absolute;
     background: whitesmoke;
     margin-top: 400px;
     width: 100%;
@@ -325,15 +331,18 @@ color: #000000;
     align-items: center;
     gap: 50px;
     border: 1px solid yellow;
+    top:413px;
 
     
     
 }
 
 .Elsie img{
+    
     border-radius: 50%;
     width: 150px;
     height: 150px;
+    position: relative;
 }
 
 .elsie p{
@@ -342,6 +351,7 @@ color: #000000;
 
 
 .Sugira img{
+    
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -352,6 +362,7 @@ color: #000000;
 }
 
 .Stephen img{
+    
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -363,6 +374,7 @@ color: #000000;
 
 
 .Husna img{
+    
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -373,6 +385,7 @@ color: #000000;
 }
 
 .Fred img{
+    
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -381,3 +394,55 @@ color: #000000;
 .Fred p{
     text-align: center;
 }
+
+.footer{
+    position: relative;
+    background: #042603;
+    top: 947px;
+    width: 100%;
+    height: 300px;
+    display: table;
+    justify-content: center;
+    content:"";
+    clear: both;
+}
+
+#Contact{
+    position: relative;
+    height: 250px;
+    width: 200px;
+    float: right;
+    margin-top: 30px;
+    margin-right: 30px;
+   
+
+}
+
+#Contact a{
+    text-decoration: none;
+    color: white; 
+}
+
+.copyright{
+    position: absolute;
+    height: 45px; 
+    bottom: 0;
+    transform: translate(-50%, -50%);
+    left: 40%;
+    right: 25%;
+    font-size: 9px;
+    width: 190px;
+}
+
+#logo img{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    margin-top: 50px;;
+    
+}
+    
+
+
+
+
