--- a/LandingP.css
+++ b/LandingP.css
@@ -1,5 +1,5 @@
 /* Reset styles */
-body {
+body,html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,7 +10,6 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    
 }
  
 
@@ -65,7 +64,7 @@ padding-top: 20px;
     width: 100%;
     height: 275px;
     top: 87px;
-    
+    background-color: whitesmoke;
 }
 
 
