--- a/sugira/LandingP.css
+++ b/sugira/LandingP.css
@@ -8,8 +8,6 @@ body {
 
 .containerall{
     width: 100%;
-    margin: 0;
-    padding: 0;
     
 }
  
@@ -442,8 +440,41 @@ top: 7px;
     margin-top: 50px;;
     
 }
-    
 
+@media only screen and (min-width:1581px){
+    .containerall{
+        width: 100%;
+        margin: 0 auto;
+        
+    }
+}
+@media only screen and (min-width: 816px){
+.team {
+    position: absolute;
+    background: whitesmoke;
+    margin-top: 400px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid yellow;
+    top: 413px;
+}
 
-
+.footer {
+    position: relative;
+    background: #042603;
+    top: 947px;
+    width: 100%;
+    height: 300px;
+    display: table;
+    justify-content: center;
+    content: "";
+    clear: both;
+    padding-left: 5px;
+    padding-right: -3px;
+}
+}
 
