--- a/elsie/styles/login.css
+++ b/elsie/styles/login.css
@@ -7,15 +7,17 @@
   }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    min-height: 100%;
     background: url("../images/background.jpeg") no-repeat;
     background-size: cover;
     background-position: center;
 }
-
+main{
+    margin-top: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 header { 
     position: fixed;
     top: 0;
@@ -256,4 +258,40 @@ header {
 
 .login-register p a:hover {
     text-decoration: underline;
+}
+
+footer {
+    position: absolute;
+    bottom: -50px;
+    width: 100%;
+    margin-top: 4em;
+    background-color: rgba(83, 113, 70, 0.5);
+    padding: 20px 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+    justify-content: space-between;
+}
+footer a{
+    text-decoration: none;
+    color: #fff;
+}
+footer #social a:hover{
+    transition: .5s;
+    text-shadow: 1px 1px 3px aquamarine;
+}
+footer .contact-nav{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#social{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2em;
 }
