--- a/elsie/styles/styles.css
+++ b/elsie/styles/styles.css
@@ -128,8 +128,8 @@ h3{
     margin: 0 auto;
     align-items: center;
     justify-content: space-around;
-}
-.sec-4{
+} 
+.sec-3{
     background-image: url(../images/section-three.jpeg);
     background-size: cover;
     background-position: center;
@@ -138,12 +138,12 @@ h3{
     padding: 2em;
     color: #162918;
 }
-.sec4-div{
+.sec3-div{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-.sec4-div div{
+.sec3-div div{
     width: 20%;
     display: flex;
     flex-direction: column;
@@ -163,29 +163,42 @@ ion-icon{
     font-weight: 100;
     text-align: center;
 }
-.sec-4 fieldset{
+.sec-3 fieldset{
     width: 30%;
     margin: 0 auto;
     background: rgba(255, 255, 255, .5);
     border: 2px solid #162918;
     border-radius: 10px;
 }
-.sec-4 fieldset legend{
+.sec-3 fieldset legend{
     margin: 0 auto;
     padding: .5em;
     text-align: center;
     font-weight: 600;
 }
-.sec-4 fieldset p{
+.sec-3 fieldset p{
     padding: 3.5em;
     font-weight: 700;
 }
-.sec4-div p{
+.sec3-div p{
     font-weight: 700;
 }
+.prods p{
+    font-size: 1.8em;
+    color: #162918;
+    -webkit-text-stroke: .5px white;
+    text-shadow: 1.5px 1px 5px aquamarine;
+
+}
+.prods img{
+    /*filter: saturate(0.5);*/
+    border-radius: 10px;
+}
 .btn{
-    width: 130px;
+    width: fit-content;
      height: 50px;
+     padding-left: 1em;
+     padding-right: 1em;
      background: #162918;
      border: 2px solid #fff;
      outline: none;
@@ -200,4 +213,17 @@ ion-icon{
 .btn:hover{
     background: #fff;
     color: #162918;
+}
+.prods{
+    position: relative;
+    text-align: center;
+}
+.centered {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+}
+.heavy{
+    transition: 0.3s;
+    background-color:rgba(83, 113, 70, 0.5) ;
 }
