--- a/elsie/styles/contact.css
+++ b/elsie/styles/contact.css
@@ -355,6 +355,40 @@ textarea.input{
     right: 50%;
     transform: translate(-40%, 38%)
 }
+footer {
+    width: 100%;
+    margin-top: 4em;
+    background-color: rgba(83, 113, 70, 0.5);
+    padding: 20px 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+    justify-content: space-between;
+}
+footer a{
+    text-decoration: none;
+    color: #fff;
+}
+footer #social a:hover{
+    transition: .5s;
+    text-shadow: 1px 1px 3px aquamarine;
+}
+footer .contact-nav{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#social{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2em;
+}
+
 
 @media (max-width: 850px) {
     .form{
