--- a/elsie/styles/styles.css
+++ b/elsie/styles/styles.css
@@ -8,6 +8,7 @@
     min-height: 100vh;
     background-color:cadetblue;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -226,4 +227,36 @@ ion-icon{
 .heavy{
     transition: 0.3s;
     background-color:rgba(83, 113, 70, 0.5) ;
+}
+footer {
+    width: 100%;
+    background-color: rgba(83, 113, 70, 0.5);
+    padding: 20px 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+    justify-content: space-between;
+}
+footer a{
+    text-decoration: none;
+    color: #fff;
+}
+footer #social a:hover{
+    transition: .5s;
+    text-shadow: 1px 1px 3px aquamarine;
+}
+footer .contact-nav{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#social{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2em;
 }
