--- a/elsie/styles/styles.css
+++ b/elsie/styles/styles.css
@@ -6,7 +6,7 @@
   }
   body {
     min-height: 100vh;
-    background-color:cadetblue;
+    background-image: url(../images/background.jpeg);
     display: flex;
     flex-direction: column;
     justify-content: center;
